WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69064
[GTK] Dragging a selection does not produce a drag image
https://bugs.webkit.org/show_bug.cgi?id=69064
Summary
[GTK] Dragging a selection does not produce a drag image
Martin Robinson
Reported
2011-09-28 23:42:15 PDT
When dragging a selection there is no drag image and instead the default icon is used.
Attachments
Patch
(22.32 KB, patch)
2011-09-28 23:59 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
Patch
(22.56 KB, patch)
2011-09-29 07:06 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2011-09-28 23:53:11 PDT
CCing a few more people since my patch touches their work.
Martin Robinson
Comment 2
2011-09-28 23:59:42 PDT
Created
attachment 109129
[details]
Patch
WebKit Review Bot
Comment 3
2011-09-29 00:04:27 PDT
Comment on
attachment 109129
[details]
Patch
Attachment 109129
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/9880826
Gyuyoung Kim
Comment 4
2011-09-29 00:13:00 PDT
Comment on
attachment 109129
[details]
Patch
Attachment 109129
[details]
did not pass efl-ews (efl): Output:
http://queues.webkit.org/results/9888426
Martin Robinson
Comment 5
2011-09-29 00:19:24 PDT
Comment on
attachment 109129
[details]
Patch Clearing review flag. I'll fix the bustage tomorrow.
Gustavo Noronha (kov)
Comment 6
2011-09-29 02:08:32 PDT
Comment on
attachment 109129
[details]
Patch
Attachment 109129
[details]
did not pass gtk-ews (gtk): Output:
http://queues.webkit.org/results/9900020
Martin Robinson
Comment 7
2011-09-29 07:06:46 PDT
Created
attachment 109157
[details]
Patch
Andreas Kling
Comment 8
2011-09-29 09:00:57 PDT
Comment on
attachment 109157
[details]
Patch Great idea! r=me.
WebKit Review Bot
Comment 9
2011-09-29 10:34:47 PDT
Comment on
attachment 109157
[details]
Patch Clearing flags on attachment: 109157 Committed
r96339
: <
http://trac.webkit.org/changeset/96339
>
WebKit Review Bot
Comment 10
2011-09-29 10:34:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug