[GTK] Dragging a selection does not produce a drag image https://bugs.webkit.org/show_bug.cgi?id=69064

Patch by Martin Robinson <mrobinson@igalia.com> on 2011-09-29
Reviewed by Andreas Kling.

Moved Chromium's generic implementation of Frame::nodeImage and
Frame::dragImageForSeletion to Frame.cpp and simply excluded via
#ifdefs platforms that do not have their own implementation. Removed
all empty implementations of these functions and Qt's which was
functionally identical.

No new tests. Drag-and-drop drag image functionality changes
are incredibly difficult to test in a non-manual way.

* CMakeListsEfl.txt: Delist FrameEfl.cpp.
* GNUmakefile.list.am: Delist FrameGtk.cpp.
* WebCore.gypi: Delist removed Frame*.cpp.
* WebCore.pro: Delist FrameQt.cpp.
* page/Frame.cpp: Moved FrameChromium implementation here.
(WebCore::ScopedFramePaintingState::ScopedFramePaintingState):
(WebCore::ScopedFramePaintingState::~ScopedFramePaintingState):
(WebCore::Frame::nodeImage):
(WebCore::Frame::dragImageForSelection):
* page/chromium/FrameChromium.cpp: Removed.
* page/efl/FrameEfl.cpp: Removed.
* page/gtk/FrameGtk.cpp: Removed.
* page/qt/FrameQt.cpp: Removed.
* page/wx/FrameWx.cpp: Removed.
* platform/gtk/ClipboardGtk.cpp:
(WebCore::ClipboardGtk::createDragImage): Call nodeImage to get
the drag image for a node.

Canonical link: https://commits.webkit.org/85106@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96339 268f45cc-cd09-0410-ab3c-d52691b4dbfc